<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragment_movie"
        android:icon="@drawable/ic_local_movies_primary_24dp"
        android:title="@string/tab_movie" />

    <item
        android:id="@+id/fragment_tv"
        android:icon="@drawable/ic_live_tv_primary_24dp"
        android:title="@string/tab_tv" />

    <item
        android:id="@+id/fragment_favorite"
        android:icon="@drawable/ic_favorite_border_favorite_24dp"
        android:title="@string/tab_favorite" />

</menu>